--- a/.github/workflows/jd_immortal_answer.yml
+++ b/.github/workflows/jd_immortal_answer.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_immortal
+name: jd_immortal_answer
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 22 * * *'
+    - cron: '0 23 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: immortal
+    types: immortal_answer
 jobs:
   build:
 
@@ -25,9 +25,9 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【神仙书院】'
+      - name: '运行 【神仙书院答题】'
         run: |
-          node jd_immortal.js
+          node jd_immortal_answer.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
