--- a/.github/workflows/jd_xtg_help.yml
+++ b/.github/workflows/jd_xtg_help.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 618家电星推官 
+name: 618家电星推官账号互助脚本 
 
 on:
   workflow_dispatch:
@@ -39,12 +39,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
-      - name: '星推官'
+      - name: '星推官互助'
         run: |
               python3 wait24.py 0.1 0.1 29
       - name: '运行'
         run: |
-          node jd_xtg.js
+          node jd_xtg_help.js
          
           
         env:
@@ -62,5 +62,3 @@ jobs:
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
           QYWX_KEY: ${{ secrets.QYWX_KEY }}
-          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
-          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
