--- a/.github/workflows/jd_joy500.yml
+++ b/.github/workflows/jd_joy500.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 宠汪汪(换20豆）
+name: 宠汪汪(换500豆）
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: jd_joy_reward
+    types: jd_joy500.js
 jobs:
   build:
 
@@ -44,7 +44,7 @@ jobs:
            python3 accwait.py 0.1 0.1 59
       - name: '运行'
         run: |
-           node jd_joy_reward.js
+           node jd_joy500.js
          
           
         env:
