--- a/.github/workflows/jd_car_exchange.yml
+++ b/.github/workflows/jd_car_exchange.yml
@@ -1,14 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 签到领现金
+name: 京东汽车（换500豆）
 
-on:
+on: 
   workflow_dispatch:
-  schedule: 
-    - cron: '2 0-23/4 * * *'
+  schedule:
+    - cron: '0 15 * * *'
+  watch:
+    types: started
   repository_dispatch:
-    types: jd_cash
+    types: jd_car_exchange
 jobs:
   build:
 
@@ -19,7 +21,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: inoyna11/jd28
-          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -34,16 +35,28 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: 'jd_cash'
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: '京东汽车兑换'
         run: |
-          node jd_cash.js
+              curl https://raw.githubusercontent.com/inoyna11/jd28/master/accwait.py -o accwait.py
+              python3 accwait.py 0.1 0.1 58
+      - name: '运行'
+        run: |
+          curl https://raw.githubusercontent.com/inoyna11/jd28/master/jd_car_exchange.js -o jd_car_exchange.js
+          node jd_car_exchange.js       
+      
+         
+          
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          JD_BEAN_STOP: ${{secrets.JD_BEAN_STOP}} #自定义延迟签到,单位毫秒. 默认分批并发无延迟. 延迟作用于每个签到接口, 如填入延迟则切换顺序签到(耗时较长)
+          JD_BEAN_SIGN_STOP_NOTIFY: ${{secrets.JD_BEAN_SIGN_STOP_NOTIFY}}
+          JD_BEAN_SIGN_NOTIFY_SIMPLE: ${{secrets.JD_BEAN_SIGN_NOTIFY_SIMPLE}}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
@@ -51,5 +64,3 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          JD_CASH_SHARECODES: ${{ secrets.JD_CASH_SHARECODES }}
-
