--- a/.github/workflows/long_hby_lottery.yml
+++ b/.github/workflows/long_hby_lottery.yml
@@ -1,14 +1,17 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 签到领现金
+name: 618主会场红包雨
 
 on:
   workflow_dispatch:
   schedule: 
-    - cron: '2 0-23/4 * * *'
+    - cron: '50 11 1-18 6 *'
+  
+  watch:
+    types: started
   repository_dispatch:
-    types: jd_cash
+    types: 测试
 jobs:
   build:
 
@@ -19,7 +22,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: inoyna11/jd28
-          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -34,22 +36,28 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: 'jd_cash'
+         
+      - name: '运行'
         run: |
-          node jd_cash.js
+          node long_hby_lottery.js
+         
+          
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          FRUITSHARECODES: ${{ secrets.FRUITSHARECODES }}
+          FRUIT_BEAN_CARD: ${{ secrets.FRUIT_BEAN_CARD }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          FRUIT_NOTIFY_CONTROL: ${{ secrets.FRUIT_NOTIFY_CONTROL }}
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          JD_CASH_SHARECODES: ${{ secrets.JD_CASH_SHARECODES }}
-
+          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
+          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
+          QYWX_KEY: ${{ secrets.QYWX_KEY }}
+          QYWX_AM: ${{ secrets.QYWX_AM }}
+          
