--- a/.github/workflows/jd_zoo.yml
+++ b/.github/workflows/jd_zoo.yml
@@ -6,7 +6,7 @@ name: 618动物联萌
 on:
   workflow_dispatch:
   schedule:
-    - cron: '13 0-23/2 * * *'
+    - cron: '13 14,15,16,17,18,19,20,21,22 * * *'
   
   watch:
     types: started
