--- a/.github/workflows/zoo.yml
+++ b/.github/workflows/zoo.yml
@@ -6,7 +6,7 @@ name: 618【宠物联盟】
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 0-23/2 * * *'
+    - cron: '15 16,17,18,19,20,21 * * *'
   watch:
     types: started
   repository_dispatch:
